--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <h1>Об авторе блога</h1>
+  <p><img align="left" src="https://twimg0-a.akamaihd.net/profile_images/1407778606/IMG_0017_bigger.JPG">Меня зовут Беляев Роман. Я занимаюсь программированием в 1С и здесь записываю накопленный опыт.</p>
 </section>
