--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -31,6 +31,9 @@ single: true
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
+  <section>
+    <div id="hypercomments_widget"></div>
+  </section>
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
