--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,11 +4,11 @@
       <h2 class="heading">Категории</h2>
       <div class="content">
         <div class="item">
-          <h3 class="title"><a href="/develop1c.html">Разработка 1С</a></h3>
+          <h3 class="title"><a href="/develop1c">Разработка 1С</a></h3>
           <h4 class="university">В этом разделе я пишу об своих экспериментах в разработке 1С.</h4>
         </div><!--//item-->
         <div class="item">
-          <h3 class="title"><a href="/skd.html">СКД</a></h3>
+          <h3 class="title"><a href="/skd">СКД</a></h3>
           <h4 class="university">Здесь я пишу об СКД. Правда пишу об этом немного.</h4>
         </div><!--//item-->
       </div><!--//content-->
@@ -120,5 +120,15 @@
 <!-- <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> -->
 <!-- custom js -->
 <script type="text/javascript" src="/js/main-min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-34619019-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
