--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,6 +25,7 @@
           <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Комсомольск-на-Амуре</li>
           <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:roman.belyaev@me.com">roman.belyaev@me.com</a></li>
           <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="http://www.1c-cod.ru/" target="blank">1c-cod.ru</a></li>
+          <li><i class="fa fa-google-plus"></i><span class="sr-only">Website:</span><a href="https://plus.google.com/102204239050620620987" target="blank">Мой профиль Google+</a></li>
         </ul>
       </div><!--//content-->
     </div><!--//section-inner-->
