--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -19,12 +19,12 @@
 
   <aside class="info aside section">
     <div class="section-inner">
-      <h2 class="heading sr-only">Basic Information</h2>
+      <h2 class="heading">Контакты</h2>
       <div class="content">
         <ul class="list-unstyled">
           <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Комсомольск-на-Амуре</li>
           <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:roman.belyaev@me.com">roman.belyaev@me.com</a></li>
-          <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="http://www.1c-cod.ru/" target="blank">1c-cod.ru</a></li>          
+          <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="http://www.1c-cod.ru/" target="blank">1c-cod.ru</a></li>
         </ul>
       </div><!--//content-->
     </div><!--//section-inner-->
