--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -99,7 +99,22 @@
         </div><!--//content-->
       </div><!--//section-inner-->
     </aside><!--//section-->
+    <aside class="testimonials aside section">
+      <div class="section-inner">
+        <h2 class="heading">Вы же понимаете что...</h2>
+        <div class="content">
+          <div class="item">
+            <blockquote class="quote">
+              <p><i class="fa fa-quote-left"></i>Есть две больших разницы, между тем, что программист хотел написать, и тем что он действительно написал.</p>
+            </blockquote>
+            <p class="source"><span class="name">ptsecurity</span><br><span class="title">Habrahabr</span></p>
+          </div><!--//item-->
 
+          <p><a class="more-link" href="http://habrahabr.ru/company/pt/blog/244159/#comment_8145777"><i class="fa fa-external-link"></i> Линк :)</a></p> 
+
+        </div><!--//content-->
+      </div><!--//section-inner-->
+    </aside>
 
   </div><!--//secondary-->
 </div><!--//row-->
