--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,7 +23,7 @@
       <div class="content">
         <ul class="list-unstyled">
           <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Комсомольск-на-Амуре</li>
-          <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:roman.belyaev@me.com">roman.belyaev@me.com</a></li>
+          <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:belyaev.rs@gmail.com">roman.belyaev@me.com</a></li>
           <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="http://www.1c-cod.ru/" target="blank">1c-cod.ru</a></li>
         </ul>
       </div><!--//content-->
@@ -110,7 +110,7 @@
             <p class="source"><span class="name">ptsecurity</span><br><span class="title">Habrahabr</span></p>
           </div><!--//item-->
 
-          <p><a class="more-link" href="http://habrahabr.ru/company/pt/blog/244159/#comment_8145777"><i class="fa fa-external-link"></i> Линк :)</a></p> 
+          <p><a class="more-link" href="http://habrahabr.ru/company/pt/blog/244159/#comment_8145777"><i class="fa fa-external-link"></i> Линк :)</a></p>
 
         </div><!--//content-->
       </div><!--//section-inner-->
