Исправление опечаток в хидере и статье 009

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -48,7 +48,7 @@
             </div><!--//item-->
 
             <div class="item">
-              <h3 class="level-title">СКД<span class="level-label">Проффесионал</span></h3>
+              <h3 class="level-title">СКД<span class="level-label">Профессионал</span></h3>
               <div class="level-bar">
                 <div class="level-bar-inner" data-level="60%">
                 </div>
@@ -56,7 +56,7 @@
             </div><!--//item-->
 
             <div class="item">
-              <h3 class="level-title">1С управление зарплатой<span class="level-label">Проффесионал</span></h3>
+              <h3 class="level-title">1С управление зарплатой<span class="level-label">Профессионал</span></h3>
               <div class="level-bar">
                 <div class="level-bar-inner" data-level="60%">
                 </div>
